[package]
edition = '2021'
name = "flac-writer"
version = "0.0.1-dev"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
license = "MIT"
repository = "https://github.com/antifuchs/flac-writer"
readme = "README.md"
description = "Types that allow embedding FLAC frames in a correct container"
documentation = "https://docs.rs/flac-writer"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
byteorder = "1.4.3"
claxon = "0.4.3"
int-conv = "0.1.4"
num = "0.4.0"
symphonia-bundle-flac = "0.4.0"
symphonia-core = "0.4.0"
thiserror = "1.0.30"

[dev-dependencies]
hex = "0.4.3"
